# nourasense

./: README.md  demo.py  pyproject.toml
src/nourasense/: __init__.py  nourasense.py
src/nourasense/data/: dri_tables.py  milestone_tables.py  motor_milestones.csv
src/nourasense/engine/: child.py  diagnosis.py  nutrient_analysis.py  severity.py
src/nourasense/utils/: calculations.py  diagnosis.py
src/pygrowup/: pygrowup.py
